test_suite/ERROR_uninitialized.out
ERROR_uninitialized.java: 11:  Semantic Error: Variable: `a` might have not been initialized.
