test_suite/ERROR_uninitialized.java
// -unused -no-style
class Main {
    public static void main(String[] a) {
    }
}

class A {
    public A test() {
        A a;
        A a2;
        a2 = a;
        return a2;
    }
}
